# Seidar

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  my-how-to.txt
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AccessToken.sol  PaymentProcessor.sol  SubscriptionManager.sol
contracts/test/: PaymentProcessor.t.sol  SubscriptionManager.t.sol
docs/: CLI.md  DOCKER.md  INTEGRATION.md  MONITORING.md
examples/: mock_backend.rs  rust_example.rs  ts_example.ts
monitoring/grafana/dashboards/: proxy-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/prometheus/: prometheus.yml
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs
sdk/ts/src/: index.ts
src/: lib.rs  main.rs
src/admin/: auth.rs  handlers.rs  mod.rs
src/blockchain/: client.rs  mod.rs  transaction.rs  types.rs  wallet.rs
src/config/: loader.rs  mod.rs  schema.rs  validation.rs  watcher.rs
src/health/: active.rs  mod.rs  passive.rs  state.rs
src/http/: mod.rs  quote.rs  request.rs  response.rs  server.rs  websocket.rs
src/http/middleware/: access_control.rs
src/lifecycle/: mod.rs  shutdown.rs  signals.rs  startup.rs
src/load_balancer/: backend.rs  least_conn.rs  mod.rs  pool.rs  round_robin.rs
src/net/: connection.rs  listener.rs  mod.rs  tls.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/payments/: cache.rs  mod.rs  monitor.rs  processor.rs  types.rs
src/quoting/: engine.rs  mod.rs  types.rs
src/resilience/: backoff.rs  circuit_breaker.rs  mod.rs  retries.rs  timeouts.rs
src/routing/: matcher.rs  mod.rs  router.rs
src/security/: access_control.rs  headers.rs  limits.rs  mod.rs  qos.rs  rate_limit.rs
tests/: failure_injection.rs  load_test.rs
tests/common/: mod.rs
